Adding preview image via meta tag

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
-    <meta property="og:image" content="preview.jpg">
+    <meta property='og:image' content="<%= image_url('preview.jpg') %>"/>
     <link rel="icon" href="<%= image_url("favicon.png") %>">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script type="text/javascript">
