Defering javascript parsing to increase performance speed

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
     <link rel="icon" href="<%= image_url("favicon.png") %>">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <script type="text/javascript" defer>
+    <script type="text/javascript" defer="defer">
       window.fullLogoURL = "<%= image_url('RickandMortyBackground.jpg') %>";
       window.profilePic = "<%= image_url('profile.png') %>";
       window.magnifyingGlass = "<%= image_url('magnifyingGlass.png') %>";
