--- a/app/assets/stylesheets/welcomepage.scss
+++ b/app/assets/stylesheets/welcomepage.scss
@@ -35,13 +35,13 @@
 
  .welcome-content {
     background-size: cover;
-    height: 650px;
+    height: 75vh;
     background: #fff;
     border: 1px solid #e2e2e2;
     box-shadow: 0 0 5px #888;
     border-radius: 4px;
     padding: 25px 0px 0px 0px;
-    width: 650px;
+    width: 65vw;
     position: absolute;
     bottom: initial;
     left: 0;
