--- a/app/assets/stylesheets/api/question_answer.scss
+++ b/app/assets/stylesheets/api/question_answer.scss
@@ -12,7 +12,7 @@
   background-color: white;
   min-height: -webkit-fill-available;
   margin: 0px auto 0px auto;
-  width: 1000px;
+  width: 80vw;
   padding: 30px 24px 24px 24px;
 }
 
