--- a/app/assets/stylesheets/welcomepage.scss
+++ b/app/assets/stylesheets/welcomepage.scss
@@ -35,13 +35,12 @@
 
  .welcome-content {
     background-size: cover;
-    height: 75vh;
     background: #fff;
     border: 1px solid #e2e2e2;
     box-shadow: 0 0 5px #888;
     border-radius: 4px;
     padding: 25px 0px 0px 0px;
-    width: 65vw;
+    width: fit-content;
     position: absolute;
     bottom: initial;
     left: 0;
@@ -77,7 +76,7 @@
     font-weight: bold;
     letter-spacing: .5px;
     font-size: 11px;
-    padding: 0px 50px 0px 0px;
+    padding: 0px 40px 0px 0px;
   }
 
   .signup-agreement {
@@ -132,7 +131,9 @@
     padding: 10px 20px 0px 0px;
     float: left;
     box-sizing: border-box;
-    width: 46%;
+    max-width: min-content;
+    display: flex;
+    flex-direction: column;
     font-weight: 400;
   }
 
