--- a/app/assets/stylesheets/welcomepage.scss
+++ b/app/assets/stylesheets/welcomepage.scss
@@ -40,7 +40,7 @@
     box-shadow: 0 0 5px #888;
     border-radius: 4px;
     padding: 25px 0px 0px 0px;
-    width: fit-content;
+    max-width: fit-content;
     position: absolute;
     bottom: initial;
     left: 0;
