Fix feed sizing

--- a/app/assets/stylesheets/api/dashboard.scss
+++ b/app/assets/stylesheets/api/dashboard.scss
@@ -66,7 +66,7 @@
   display: flex;
   width: 60vw;
   margin: 0px auto 0px auto;
-  padding: 30px 24px 24px 24px;
+  padding-top: 30px;
 }
 
 .feed-item {
