Change home logo

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -41,6 +41,7 @@
   display: flex;
   height: -webkit-fill-available;
   margin-top: 5px;
+  padding: 5px;
  }
 
  #feedlogo:hover {
@@ -51,7 +52,7 @@
 .home-name {
   font-weight: 600;
   font-size: 16px;
-  padding: 5px 0px 0px 0px;
+  padding: 5px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
 
