--- a/app/assets/stylesheets/api/dashboard.scss
+++ b/app/assets/stylesheets/api/dashboard.scss
@@ -1,5 +1,9 @@
 .dashboard {
   background-color: #efefef;
+  width: inherit;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .dashboard-header {
@@ -65,7 +69,6 @@
 .feed {
   display: flex;
   width: 60vw;
-  margin: 0px auto 0px auto;
   padding-top: 30px;
 }
 
