Modify answer form to fix answer input

--- a/app/assets/stylesheets/question_box.scss
+++ b/app/assets/stylesheets/question_box.scss
@@ -51,6 +51,7 @@ flex-direction: column;
 .question-input {
   box-sizing: border-box;
   direction: ltr;
+  height: 150px;
   width: 100%;
   box-shadow: none;
   background-color: transparent;
