--- a/app/assets/stylesheets/question_box.scss
+++ b/app/assets/stylesheets/question_box.scss
@@ -51,7 +51,6 @@ flex-direction: column;
 .question-input {
   box-sizing: border-box;
   direction: ltr;
-  height: 150px;
   width: 100%;
   box-shadow: none;
   background-color: transparent;
@@ -59,7 +58,7 @@ flex-direction: column;
   border: none;
   flex: 1 1 0%;
   height: auto;
-  overflow: hidden;
+  overflow: scroll;
   overflow-wrap: break-word;
   line-height: 1.4;
   font-size: 18px;
